--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
         Welcome to my Weather App!!!
     </h1>
     <footer>
-        Coded by Camila Dhaier
+        Coded by 
+        <a href="https://github.com/camilaDhaier" target="_blank"> Camila Dhaier</a>
+        code hosted on <a href="https://github.com/camilaDhaier/myweatherapp" target="_blank"> GitHub</a>
+        and website hosted <a href="https://app.netlify.com/sites/animated-queijadas-a302e3/deploys/669554b5296a3f60a3945257" target="_blank">on Netlify</a>
     </footer>
 </body>
 </html>
