--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Weather App</title>
+
 </head>
 <body>
-    <h1>
-        Welcome to my Weather App!!!
-    </h1>
+   <header>
+    <input type="search" placeholder="Enter a city..." required />
+    <input type="submit" value="Search"/>
+
+   </header>
+<div>
+   <h1>
+    Paris
+   </h1>
+   <p>
+    Tuesday 14;49,scattered clouds
+    <br />
+    Humidity: 66%, Wind: 3.13km/h
+   </p>
+   </div>
+   <div> ☀️ 26°C </div>
+ 
     <footer>
         Coded by 
         <a href="https://github.com/camilaDhaier" target="_blank"> Camila Dhaier</a>
         is <a href="https://github.com/camilaDhaier/myweatherapp" target="_blank"> open-sourced on GitHub</a>
         and <a href="https://app.netlify.com/sites/animated-queijadas-a302e3/deploys/669554b5296a3f60a3945257" target="_blank">hosted on Netlify</a>
     </footer>
+    <script src="src/index.js"></script>
 </body>
 </html>
