--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
     <div class="weather-app">
    <header>
-    <form class="search-form">
+    <form class="search-form" id="search-form">
     <input type="search" placeholder="Enter a city..." required 
+    id="search-form-input"
     class="search-form-input"
     />
     <input type="submit" value="Search"
@@ -27,7 +28,7 @@
    <main>
     <div class="weather-app-data">
 <div>
-   <h1 class="weather-app-city">
+   <h1 class="weather-app-city" id="city">
     Paris
    </h1>
    <p class="weather-app-details">
